tests/snapshots/run_wpt_conformance__trtx_expand_float32_2D_tensor_to_2D__1st_dimension_.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "expand.https.any.js",
    "expand float32 2D tensor to 2D (1st dimension)",
    "trtx",
    "PASS",
)
