tests/snapshots/run_wpt_conformance__trtx_expand_float32_2D_tensor_to_2D__2nd_dimension_.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "expand.https.any.js",
    "expand float32 2D tensor to 2D (2nd dimension)",
    "trtx",
    "PASS",
)
